# cli-agent-manager

./: CODEBASE.md  README.md  mypy.ini  pyproject.toml  test-http-setup.sh  tmux-install.sh  tron-agent-tools.sh
docs/: agent-profile.md  api.md  http-migration-guide.md
examples/assign/: README.md  analysis_supervisor.md  analysis_supervisor_http.md  data_analyst.md  report_generator.md  test-example.sh
src/cli_agent_manager/agent_store/: code_supervisor.md
src/cli_agent_manager/agent_tools/: http_server.py  test_integration.py
src/cli_agent_manager/api/: main.py  models.py
src/cli_agent_manager/cli/: main.py
src/cli_agent_manager/cli/commands/: flow.py  init.py
src/cli_agent_manager/clients/: agent_communication.py  database.py
src/cli_agent_manager/models/: flow.py  terminal.py
src/cli_agent_manager/providers/: base.py  kiro_cli.py  q_cli.py
src/cli_agent_manager/services/: cleanup_service.py  inbox_service.py  session_service.py
src/cli_agent_orchestrator/: constants.py
src/cli_agent_orchestrator/agent_store/: developer.md  reviewer.md
src/cli_agent_orchestrator/agent_tools/: __init__.py  cli.py
src/cli_agent_orchestrator/api/: models.py
src/cli_agent_orchestrator/cli/commands/: install.py  launch.py  shutdown.py
src/cli_agent_orchestrator/clients/: database.py  tmux.py
src/cli_agent_orchestrator/providers/: claude_code.py  manager.py
src/cli_agent_orchestrator/services/: flow_service.py  terminal_service.py
src/cli_agent_orchestrator/utils/: agent_profiles.py  logging.py  terminal.py
